Facebook clone Adding Right sidebar

--- a/HTML5/css/projects/Facebook/index.html
+++ b/HTML5/css/projects/Facebook/index.html
@@ -30,6 +30,40 @@
                 </ul>
             </nav>
         </header>
+        <aside class="sidebar-esquerda">
+            <section class="others">                
+                <a href=""><div><i class="fas fa-user"></i><p>user</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-feed"></i><p>Feed</p><span>...</span></div></a>
+                <a href=""><div><i class="fab fa-facebook-messenger"></i><p>Messenger</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-television"></i><p>watch</p><span>...</span></div></a>
+            </section>
+            <section class="atalhos">
+                <h2>Atalhos</h2>
+                <a href=""><div><i class="fas fa-group"></i><p>Group Name</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-group"></i><p>Group Name</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-group"></i><p>Group Name</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-group"></i><p>Group Name</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-group"></i><p>Group Name</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-sort-down"></i><p>Ver mais...</p><span>...</span></div></a>
+            </section>
+            <section class="explorar">
+                <h2>Explorar</h2>
+                <a href=""><div><i class="fas fa-circle"></i><p>Pages</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-group"></i><p>Groups</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-circle"></i><p>Feed</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-circle"></i><p>Feed</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-circle"></i><p>Feed</p><span>...</span></div></a>
+                <a href=""><div><i class="fas fa-sort-down"></i><p>Ver mais...</p><span>...</span></div></a>
+            </section>
+            <a href="">Ver mais...</a>
+        </aside>
+        <main class="principal">
+           principal
+        </main>
+        <section class="anuncios">  
+            anuncios          
+        </section>
+        <aside class="sidebar-direita">direita</aside>
     </div>
 </body>
 </html>
