Adding Javascritp and more...

--- a/HTML5/css/projects/Facebook/index.html
+++ b/HTML5/css/projects/Facebook/index.html
@@ -194,6 +194,20 @@
                     
         </section>
         <aside class="sidebar-direita">
+            <div class="games">
+                <div>
+                    <img src="img/kevin hart2.jpeg" alt="">
+                    <img src="img/kevin and Dwayne2.jpeg" alt="">
+                </div>
+                <div>
+                    <img src="img/kevin hart2.jpeg" alt="">
+                    <img src="img/kevin and Dwayne2.jpeg" alt="">
+                </div>
+                <div>
+                    <img src="img/kevin hart2.jpeg" alt="">
+                    <img src="img/kevin and Dwayne2.jpeg" alt="">
+                </div>
+            </div>
             <div class="chat-box">
                 <div class="active-user">
                     <a href="">
